--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
 .search-form {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
@@ -117,7 +118,7 @@
   vertical-align: bottom;
 }
 
-.tree-node-parent {
+.tree-name {
   display: inline-flex;
 }
 
@@ -157,4 +158,10 @@
 
 .collapsed {
   display: none;
+}
+
+@media (min-width: 481px) {
+  .search-form {
+    flex-direction: row;
+  }
 }
